fix flextab on mobile

--- a/packages/rocketchat-theme/client/imports/general/base_old.css
+++ b/packages/rocketchat-theme/client/imports/general/base_old.css
@@ -2933,6 +2933,7 @@ body:not(.is-cordova) {
 		position: relative;
 		display: none;
 		width: var(--flex-tab-width);
+		height: calc(100% - 61px);
 		overflow-x: visible;
 
 		& .control {
